--- a/package.json
+++ b/package.json
@@ -45,5 +45,11 @@
       "last 1 safari version"
     ]
   },
+  "devDependencies": {
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@redux-devtools/extension": "^3.2.5",
+    "@rollup/plugin-terser": "^0.4.1",
+    "svgo": "^3.0.2"
+  },
   "proxy": "http://localhost:8000/"
 }
