--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.0-beta1",
     "bootstrap-dark-5": "^1.1.3",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
